# rawtowise

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  install.sh  pyproject.toml  uninstall.sh
.claude/: settings.json
.claude/hooks/: version-auto-bump.sh  version-check-precommit.sh  version-sync.sh
.codex/: config.toml  hooks.json
.codex/hooks/: hook_utils.py  post_tool_use.py  pre_tool_use.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/rawtowise/: __init__.py  cli.py  compile.py  config.py  ingest.py  lint.py  llm.py  query.py  sources.py
tests/: test_codex_hooks.py  test_llm.py  test_sources.py
